Added Alcohol tracker
